--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-440.8KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林), server: 185.167.116.252, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 🇺🇸 美国-406.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.02MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-324.8KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林), server: 213.183.53.179, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇨🇳 中国-457.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-8.37MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
   - {name: 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.22MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.20MB/s(Youtube:不良林), server: jpaz2.xmrth-node.xyz, port: 13240, type: vmess, uuid: 6f0349b2-7484-3b32-98a5-04f3a857dde0, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz2.xmrth-node.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-310.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-150.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-406.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-457.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.37MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
