--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-11.20MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
   - {name: 🇭🇰 香港-323.5KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1011.4KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.79MB/s(Youtube:不良林), server: cm1.jflashfal.xyz, port: 18353, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
   - {name: 🇺🇸 美国-919.8KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-370.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
       - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
